<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.cucumber</groupId>
    <artifactId>gherkin</artifactId>
    <version>5.1.1-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>Gherkin</name>
    <description>Gherkin parser</description>
    <url>https://github.com/cucumber/gherkin-java</url>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com/cucumber/gherkin-java.git</connection>
        <developerConnection>scm:git:git@github.com:cucumber/gherkin-java.git</developerConnection>
        <url>git://github.com/cucumber/gherkin-java.git</url>
    </scm>

    <dependencies>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>gherkin-jvm-deps</artifactId>
            <version>1.1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>com.google.code.gson</groupId>
                    <artifactId>gson</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.iharder</groupId>
                    <artifactId>base64</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>java11</id>
                        <phase>compile</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                        <configuration>
                            <release>11</release>
                            <jdkToolchain>
                                <version>11</version>
                            </jdkToolchain>
                            <compileSourceRoots>
                                <compileSourceRoot>${project.basedir}/src/main/java11</compileSourceRoot>
                            </compileSourceRoots>
                            <multiReleaseOutput>true</multiReleaseOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>gherkin.cli.Main</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Automatic-Module-Name>${project.Automatic-Module-Name}</Automatic-Module-Name>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>1.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                    <!-- <execution> -->
                        <!-- <id>tests</id> -->
                        <!-- <phase>test</phase> -->
                        <!-- <goals> -->
                            <!-- <goal>toolchain</goal> -->
                        <!-- </goals> -->
                    <!-- </execution> -->
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>${base.java.version}</version>
                            <vendor>${toolchain.vendor}</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <argLine>${project.surefire.argLine.jpms}</argLine>
                    <useFile>false</useFile>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>4.2.1</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Export-Package>gherkin.*</Export-Package>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java11</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <base.java.version>11</base.java.version>
            </properties>
        </profile>

        <profile>
            <id>release-sign-artifacts</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <configuration>
                            <useAgent>true</useAgent>
                            <gpgArguments>
                                <arg>--local-user</arg>
                                <arg>devs@cucumber.io</arg>
                            </gpgArguments>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.custom.encoding>UTF-8</project.custom.encoding>
        <project.build.sourceEncoding>${project.custom.encoding}</project.build.sourceEncoding>
        <project.build.outputEncoding>${project.custom.encoding}</project.build.outputEncoding>
        <project.reporting.outputEncoding>${project.custom.encoding}</project.reporting.outputEncoding>
        <project.Automatic-Module-Name>io.cucumber.gherkin</project.Automatic-Module-Name>
        <project.surefire.argLine.jpms></project.surefire.argLine.jpms>
        <project.surefire.argLine.jpms.global>
            --add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=ALL-UNNAMED
            --add-opens ${project.Automatic-Module-Name}/${project.Automatic-Module-Name}.tests=org.junit.platform.commons
            --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
            --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
        </project.surefire.argLine.jpms.global>
        <project.surefire.argLine.jpms.module></project.surefire.argLine.jpms.module>
        <toolchain.vendor>openjdk</toolchain.vendor>
        <base.java.version>1.8</base.java.version>
    </properties>
</project>
